# xx-core

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: Dockerfile  build.yml  docs.yml  rust.yml
macros/: Cargo.toml
macros/src/: async_fn.rs  async_trait.rs  closure.rs  duration.rs  error.rs  functions.rs  future.rs  lib.rs  make_closure.rs  sync_task.rs  syscall.rs  transform.rs  visit.rs  wrap_function.rs
macros/src/asynchronous/: branch.rs  invoke.rs  lang.rs  mod.rs  options.rs  traits.rs  transform.rs  visit.rs
macros/src/closure/: async_fn.rs  make_closure.rs  mod.rs  sync_task.rs  transform.rs
src/: cell.rs  closure.rs  error.rs  impls.rs  lib.rs  log.rs  macros.rs  pointer.rs  runtime.rs  sysdep.rs
src/async_std/: README.md  ext.rs  iterator.rs  mod.rs
src/container/: mod.rs
src/coroutines/: README.md  branch.rs  closure.rs  context.rs  env.rs  environment.rs  executor.rs  impls.rs  internal.rs  join.rs  macros.rs  mod.rs  ops.rs  runtime.rs  select.rs  spawn.rs  task.rs  wake.rs  worker.rs
src/error/: common.rs  kind.rs  mod.rs
src/fiber/: arm64.rs  arm64.s  mod.rs  pool.rs  x64.rs  x64.s
src/future/: block_on.rs  closure.rs  internal.rs  mod.rs
src/impls/: async_fn.rs  bytes.rs  captures.rs  cell.rs  mod.rs  option.rs  result.rs  uint.rs  uninit_buf.rs
src/io/: mod.rs  typed.rs
src/log/: internal.rs  logger.rs  macros.rs  mod.rs
src/macros/: branch.rs  mod.rs  pointer.rs  runtime.rs  traits.rs
src/opt/: hint.rs
src/os/: dirent.rs  epoll.rs  error.rs  eventfd.rs  fcntl.rs  futex.rs  inet.rs  io_uring.rs  (+13 more)
tests/: Cargo.toml
(+87 files in other folders)
